------------------------------------------------------------------------
r148 | draeger1 | 2013-11-04 12:52:11 -0800 (Mon, 04 Nov 2013) | 4 lines


Fixed bug where wf_extrap value of ASP was not picked up by BOSampleStepper.


------------------------------------------------------------------------
r147 | draeger1 | 2013-10-31 10:39:08 -0700 (Thu, 31 Oct 2013) | 4 lines


Updated savesys command to print out lock commands for locked atoms.


------------------------------------------------------------------------
r146 | draeger1 | 2013-10-23 11:05:36 -0700 (Wed, 23 Oct 2013) | 4 lines


Updated promote_occ command to allow optional argument to set spin channels independently.  If nspin > 1 and no additional spin argument is provided, promote_occ will promote both spin channels.


------------------------------------------------------------------------
r145 | draeger1 | 2013-10-22 16:47:52 -0700 (Tue, 22 Oct 2013) | 4 lines


Added scf_ef timer to BOSampleStepper to capture more complete timing profile of work within scfloop.


------------------------------------------------------------------------
r144 | draeger1 | 2013-09-27 11:47:19 -0700 (Fri, 27 Sep 2013) | 4 lines


Added savewffreq variable to save all/one state every X MD iterations.


------------------------------------------------------------------------
r143 | draeger1 | 2013-09-18 10:59:17 -0700 (Wed, 18 Sep 2013) | 4 lines


Added second argument to savedenfreq to allow user to specify base filename and path for density snapshots.


------------------------------------------------------------------------
r142 | draeger1 | 2013-08-29 12:06:38 -0700 (Thu, 29 Aug 2013) | 4 lines


Fixed bug in EmpiricalPotentialCmd where arguments were being passed to EmpiricalPotential in wrong order.


------------------------------------------------------------------------
r141 | draeger1 | 2013-08-28 13:20:52 -0700 (Wed, 28 Aug 2013) | 4 lines

